# Mockly

./: .gitignore  README.md  TTS-gemini-stream.py  TTS-kokoro-stream.py  audio-compare.m4a  main.py  pyproject.toml  whisper-test.py
backend/: LLM-gemini.py  STT-compare.py  TTS-chatterbox.py  TTS-gemini-save.py  TTS-kokoro-stream.py  TTS-pyttsx.py  constants.py  main.py  pyproject.toml  server.py  vad-loop.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/(auth)/: layout.js
frontend/app/(auth)/signIn/: page.js
frontend/app/(auth)/signUp/: page.js
frontend/app/interview/: layout.js
frontend/app/interview/call/: page.js
frontend/app/interview/end/: page.js
frontend/app/interview/start/: page.js
frontend/public/: player-processor.js  processor.js
